--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Teste do DevOps.</div>
+	<div class="alert">Teste do DevOps1.</div>
 	
 	<div class="container">
 		<div class="logo">
